Prepare document endpoints
